--- a/style.css
+++ b/style.css
@@ -1,38 +1,35 @@
-body{
-    background-color:black;
-    font-family:Arial;
-    color:black;
+body {
+    background-color:black
 }
-h1 {
-    color:grey;
+main {
+    background-color: white;
+    font-family: Arial;
+    max-width: 500px;
+    margin: auto;
+    border-radius: 25px;
+    padding: 1px;
+}
+.maindiv {
+    color: black;
+    display: block;
+    margin: auto;
+    width: 60%
+}
+.title {
+    color: grey;
     text-align: center;
     font-size: xx-large;
 }
-h2 {
+.copyright {
     color: black;
-    display: block;
-    font-size: 18px;
-    font-weight:normal;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: left;
+    margin: 9px;
 }
-p {
-    color:white;
+.tm {
+    color: white;
+    font-size: 12px;
+    font-weight: normal;
     text-align: center;
-  }
-.maindiv {
-    background-color: white;
-    color: black;
-    max-width: 500px;
-    margin: auto;
-    padding: 20px;
-    border-radius: 25px;
-}
-.data {
-    background-color: white;
-    color: black;
-    max-width: 300px;
-    margin: auto;
-    display:block;
-}
-.get_rich {
-    font-size:large;
 }
